
			     BZFlag release notes

* BeOS port - Francois Revol
* Collision detection fixes - David Trowbridge, Jeff Myers
* PlayerId -> ubyte - David Trowbridge, Frank Thilo
* Get rid of reconnect port - David Trowbridge
* Hunt opponent in HUD - Adam Krell, David Trowbridge
* Flag system cleanup - Dave Brosius

BZFlag 1.7g2 "Steely Eyed Banana" (was 1.7g1)
-------------------------------------------------------

* public release now under LGPL v2.1 - Tim Riker
* change LICENSE to COPYING - Tim Riker
* server administration stuff - Jeff Myers, Frank Thilo, David Trowbridge
* admin-by-keys - Michael Hoffman
* /help messages - Michael Hoffman, David Trowbridge
* New super-bullet texture - Justin Zaun, Jeff Mills, David Trowbridge
* IRIX fixes - David Trowbridge
* cygwin/mingw32 fixes - Tupone Alfredo
* Solaris fixes - David Trowbridge
* OSX Fixes - Sean, David Wollner
* server list cache - Michael Hoffman
* E-mail field fixes - Lars Luthman
* colorized console - Dave R (Trepan), David Trowbridge
* automake/autoconf - Tupone Alfredo, David Trowbridge, Tim Riker
* check for unknown message types - Frank Thilo 
* check incoming TCP for oversized messages and dump player - Frank Thilo
* multiline server and ad messages with '\n' - Lars Luthman
* -speedtol server option: specify tolerance for speed kick - Jeff Myers
* /report server command - Lars Luthman
* -sl server option: shot limit for flags - Michael Hoffman
* limit /password tries - Jeff Myers
* -tftimeout server option - Lars Luthman
* put observers to the bottom of the scoreboard - Lars Luthman
* resize mouse boxes - Frank Thilo
* choose [un]silence - Michael Hoffman, Tim Riker
* flag on radar/view on/off - Michael Hoffman, Tim Riker
* -badword server support - Dave Brosius
* resize radar/msg area - Frank Thilo
* Drop team flags where player last was on exit - Dave Brosius
* tanks driving too fast are kicked - Dave Brosius
* remove non-printable characters in callsign in server - Frank Thilo