@@ -1,6 +1,9 @@
 
 			     BZFlag release notes
 
+* Pass reason in MsgKilled, add support for SR noise - Dave Brosius
+* Remove unnessary MsgScore from player to server - Dave Brosius
+* Remove old lag pings - Dave Brosius
 * BeOS port - Francois Revol
 * Collision detection fixes - David Trowbridge, Jeff Myers
 * PlayerId -> ubyte - David Trowbridge, Frank Thilo
